kubernetes-deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genpassword-djangpo-pro-master
  namespace: ayunw
  labels:
    appName: genpassword-django
spec:
  replicas: 2
  selector:
    matchLabels:
      appName: genpassword-django
  minReadySeconds: 1
  progressDeadlineSeconds: 60
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        appName: genpassword-django
    spec:
      imagePullSecrets:
        - name: "registry-auth-ayunw"
      containers:
        - name: genpassword-pro-django3
          image: registry.cn-hangzhou.aliyuncs.com/ayunw/django-generate-passwd:v3.1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "200Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "500m"
